Servidor executa npx para obter cotação yahoo-finance
